buttons still need to help
how to fix initial slowdown

--- a/src/index.scss
+++ b/src/index.scss
@@ -89,6 +89,17 @@ canvas {
   color: white;
 }
 
+.play_but {
+  padding-left: 20%;
+  padding-right: 20%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  border-radius: 20px;
+  font-size: medium;
+  border-width: 0px;
+  color: white;
+}
+
 .demotionText {
   text-align: center;
   margin: 5%;
